# GildedRose-Refactoring-Kata

python/: .gitignore  Makefile  README.md  gilded_rose.py  pyproject.toml  texttest_fixture.py
python/tests/: test_gilded_rose.py  test_gilded_rose_approvals.py
