[tool.poetry]
name = "gilded-rose"
version = "0.1.0"
description = ""
authors = ["MatiasLLL <matias.larralde97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
approvaltests = "^18.0.5"
pytest-approvaltests = "^0.2.4"
coverage = "^7.14.1"
ruff = "^0.15.16"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"

